# openGLGames

./: .gitignore  Bird.cpp  Bird.h  Blocks.cpp  Blocks.h  Board.cpp  Board.h  CMakeLists.txt  Cannon.cpp  Cannon.h  DrawHelper.cpp  DrawHelper.h  Globals.h  Makefile  Map.cpp  Map.h  Meters.cpp  Object.cpp  Object.h  README.md  main.cpp
2d/: Bird.cpp  Board.h  CMakeLists.txt  Cannon.cpp  Globals.h  Makefile  Meters.cpp  Meters.h  Obstacle.cpp  Obstacle.h  main.cpp
3d/: Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  DrawHelper.cpp  DrawHelper.h  Globals.h  Makefile  jumpIt  main.cpp
